--- a/caddycfg/002_Caddyfile.tmpl
+++ b/caddycfg/002_Caddyfile.tmpl
@@ -1,6 +1,9 @@
 ${DOMAIN}:${HTTP_PORT} {
 tls off
 timeouts none
+proxy ${DOHPATH} https://dns.google.com/ {
+without ${DOHPATH}
+}
 proxy ${WSPATH} localhost:${V2_PORT} {
 websocket
 header_upstream -Origin
@@ -14,6 +17,9 @@ if {path} not ${WSPATH}
 ${DOMAIN}:${HTTPS_PORT} {
 tls ${TLS}
 timeouts none
+proxy ${DOHPATH} https://dns.google.com/ {
+without ${DOHPATH}
+}
 proxy ${WSPATH} localhost:${V2_PORT} {
 websocket
 header_upstream -Origin
