--- a/caddycfg/001_Caddyfile.tmpl
+++ b/caddycfg/001_Caddyfile.tmpl
@@ -9,7 +9,7 @@ websocket
 header_upstream -Origin
 }
 redir 301 {
-if {path} not ${WSPATH}
+if {path} not ${WSPATH} or ${DOHPATH}
 / {scheme}://${FAILOVER}{uri}
 }
 }
@@ -25,7 +25,7 @@ websocket
 header_upstream -Origin
 }
 redir 301 {
-if {path} not ${WSPATH}
+if {path} not ${WSPATH} or ${DOHPATH}
 / {scheme}://${FAILOVER}{uri}
 }
 }
